[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Bike/BikePhysics.tres" type="PhysicsMaterial" id=1]
[ext_resource path="res://Assets/Bike/BikeController.gd" type="Script" id=2]
[ext_resource path="res://Assets/Bike/BikeCamera.gd" type="Script" id=3]

[sub_resource type="CylinderMesh" id=1]

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( 0, 1, 1, 0.0980171, 1, 0.995185, 0.19509, 1, 0.980785, 0.290285, 1, 0.95694, 0.382683, 1, 0.92388, 0.471397, 1, 0.881921, 0.55557, 1, 0.83147, 0.634393, 1, 0.77301, 0.707107, 1, 0.707107, 0.77301, 1, 0.634393, 0.83147, 1, 0.55557, 0.881921, 1, 0.471397, 0.92388, 1, 0.382683, 0.95694, 1, 0.290285, 0.980785, 1, 0.19509, 0.995185, 1, 0.0980171, 1, 1, 6.12303e-17, 0.995185, 1, -0.0980171, 0.980785, 1, -0.19509, 0.95694, 1, -0.290285, 0.92388, 1, -0.382683, 0.881921, 1, -0.471397, 0.83147, 1, -0.55557, 0.77301, 1, -0.634393, 0.707107, 1, -0.707107, 0.634393, 1, -0.77301, 0.55557, 1, -0.83147, 0.471397, 1, -0.881921, 0.382683, 1, -0.92388, 0.290285, 1, -0.95694, 0.19509, 1, -0.980785, 0.0980171, 1, -0.995185, 1.22461e-16, 1, -1, -0.0980171, 1, -0.995185, -0.19509, 1, -0.980785, -0.290285, 1, -0.95694, -0.382683, 1, -0.92388, -0.471397, 1, -0.881921, -0.55557, 1, -0.83147, -0.634393, 1, -0.77301, -0.707107, 1, -0.707107, -0.77301, 1, -0.634393, -0.83147, 1, -0.55557, -0.881921, 1, -0.471397, -0.92388, 1, -0.382683, -0.95694, 1, -0.290285, -0.980785, 1, -0.19509, -0.995185, 1, -0.0980171, -1, 1, -1.83691e-16, -0.995185, 1, 0.0980171, -0.980785, 1, 0.19509, -0.95694, 1, 0.290285, -0.92388, 1, 0.382683, -0.881921, 1, 0.471397, -0.83147, 1, 0.55557, -0.77301, 1, 0.634393, -0.707107, 1, 0.707107, -0.634393, 1, 0.77301, -0.55557, 1, 0.83147, -0.471397, 1, 0.881921, -0.382683, 1, 0.92388, -0.290285, 1, 0.95694, -0.19509, 1, 0.980785, -0.0980171, 1, 0.995185, -2.44921e-16, 1, 1, 0, 0.6, 1, 0.0980171, 0.6, 0.995185, 0.19509, 0.6, 0.980785, 0.290285, 0.6, 0.95694, 0.382683, 0.6, 0.92388, 0.471397, 0.6, 0.881921, 0.55557, 0.6, 0.83147, 0.634393, 0.6, 0.77301, 0.707107, 0.6, 0.707107, 0.77301, 0.6, 0.634393, 0.83147, 0.6, 0.55557, 0.881921, 0.6, 0.471397, 0.92388, 0.6, 0.382683, 0.95694, 0.6, 0.290285, 0.980785, 0.6, 0.19509, 0.995185, 0.6, 0.0980171, 1, 0.6, 6.12303e-17, 0.995185, 0.6, -0.0980171, 0.980785, 0.6, -0.19509, 0.95694, 0.6, -0.290285, 0.92388, 0.6, -0.382683, 0.881921, 0.6, -0.471397, 0.83147, 0.6, -0.55557, 0.77301, 0.6, -0.634393, 0.707107, 0.6, -0.707107, 0.634393, 0.6, -0.77301, 0.55557, 0.6, -0.83147, 0.471397, 0.6, -0.881921, 0.382683, 0.6, -0.92388, 0.290285, 0.6, -0.95694, 0.19509, 0.6, -0.980785, 0.0980171, 0.6, -0.995185, 1.22461e-16, 0.6, -1, -0.0980171, 0.6, -0.995185, -0.19509, 0.6, -0.980785, -0.290285, 0.6, -0.95694, -0.382683, 0.6, -0.92388, -0.471397, 0.6, -0.881921, -0.55557, 0.6, -0.83147, -0.634393, 0.6, -0.77301, -0.707107, 0.6, -0.707107, -0.77301, 0.6, -0.634393, -0.83147, 0.6, -0.55557, -0.881921, 0.6, -0.471397, -0.92388, 0.6, -0.382683, -0.95694, 0.6, -0.290285, -0.980785, 0.6, -0.19509, -0.995185, 0.6, -0.0980171, -1, 0.6, -1.83691e-16, -0.995185, 0.6, 0.0980171, -0.980785, 0.6, 0.19509, -0.95694, 0.6, 0.290285, -0.92388, 0.6, 0.382683, -0.881921, 0.6, 0.471397, -0.83147, 0.6, 0.55557, -0.77301, 0.6, 0.634393, -0.707107, 0.6, 0.707107, -0.634393, 0.6, 0.77301, -0.55557, 0.6, 0.83147, -0.471397, 0.6, 0.881921, -0.382683, 0.6, 0.92388, -0.290285, 0.6, 0.95694, -0.19509, 0.6, 0.980785, -0.0980171, 0.6, 0.995185, -2.44921e-16, 0.6, 1, 0, 0.2, 1, 0.0980171, 0.2, 0.995185, 0.19509, 0.2, 0.980785, 0.290285, 0.2, 0.95694, 0.382683, 0.2, 0.92388, 0.471397, 0.2, 0.881921, 0.55557, 0.2, 0.83147, 0.634393, 0.2, 0.77301, 0.707107, 0.2, 0.707107, 0.77301, 0.2, 0.634393, 0.83147, 0.2, 0.55557, 0.881921, 0.2, 0.471397, 0.92388, 0.2, 0.382683, 0.95694, 0.2, 0.290285, 0.980785, 0.2, 0.19509, 0.995185, 0.2, 0.0980171, 1, 0.2, 6.12303e-17, 0.995185, 0.2, -0.0980171, 0.980785, 0.2, -0.19509, 0.95694, 0.2, -0.290285, 0.92388, 0.2, -0.382683, 0.881921, 0.2, -0.471397, 0.83147, 0.2, -0.55557, 0.77301, 0.2, -0.634393, 0.707107, 0.2, -0.707107, 0.634393, 0.2, -0.77301, 0.55557, 0.2, -0.83147, 0.471397, 0.2, -0.881921, 0.382683, 0.2, -0.92388, 0.290285, 0.2, -0.95694, 0.19509, 0.2, -0.980785, 0.0980171, 0.2, -0.995185, 1.22461e-16, 0.2, -1, -0.0980171, 0.2, -0.995185, -0.19509, 0.2, -0.980785, -0.290285, 0.2, -0.95694, -0.382683, 0.2, -0.92388, -0.471397, 0.2, -0.881921, -0.55557, 0.2, -0.83147, -0.634393, 0.2, -0.77301, -0.707107, 0.2, -0.707107, -0.77301, 0.2, -0.634393, -0.83147, 0.2, -0.55557, -0.881921, 0.2, -0.471397, -0.92388, 0.2, -0.382683, -0.95694, 0.2, -0.290285, -0.980785, 0.2, -0.19509, -0.995185, 0.2, -0.0980171, -1, 0.2, -1.83691e-16, -0.995185, 0.2, 0.0980171, -0.980785, 0.2, 0.19509, -0.95694, 0.2, 0.290285, -0.92388, 0.2, 0.382683, -0.881921, 0.2, 0.471397, -0.83147, 0.2, 0.55557, -0.77301, 0.2, 0.634393, -0.707107, 0.2, 0.707107, -0.634393, 0.2, 0.77301, -0.55557, 0.2, 0.83147, -0.471397, 0.2, 0.881921, -0.382683, 0.2, 0.92388, -0.290285, 0.2, 0.95694, -0.19509, 0.2, 0.980785, -0.0980171, 0.2, 0.995185, -2.44921e-16, 0.2, 1, 0, -0.2, 1, 0.0980171, -0.2, 0.995185, 0.19509, -0.2, 0.980785, 0.290285, -0.2, 0.95694, 0.382683, -0.2, 0.92388, 0.471397, -0.2, 0.881921, 0.55557, -0.2, 0.83147, 0.634393, -0.2, 0.77301, 0.707107, -0.2, 0.707107, 0.77301, -0.2, 0.634393, 0.83147, -0.2, 0.55557, 0.881921, -0.2, 0.471397, 0.92388, -0.2, 0.382683, 0.95694, -0.2, 0.290285, 0.980785, -0.2, 0.19509, 0.995185, -0.2, 0.0980171, 1, -0.2, 6.12303e-17, 0.995185, -0.2, -0.0980171, 0.980785, -0.2, -0.19509, 0.95694, -0.2, -0.290285, 0.92388, -0.2, -0.382683, 0.881921, -0.2, -0.471397, 0.83147, -0.2, -0.55557, 0.77301, -0.2, -0.634393, 0.707107, -0.2, -0.707107, 0.634393, -0.2, -0.77301, 0.55557, -0.2, -0.83147, 0.471397, -0.2, -0.881921, 0.382683, -0.2, -0.92388, 0.290285, -0.2, -0.95694, 0.19509, -0.2, -0.980785, 0.0980171, -0.2, -0.995185, 1.22461e-16, -0.2, -1, -0.0980171, -0.2, -0.995185, -0.19509, -0.2, -0.980785, -0.290285, -0.2, -0.95694, -0.382683, -0.2, -0.92388, -0.471397, -0.2, -0.881921, -0.55557, -0.2, -0.83147, -0.634393, -0.2, -0.77301, -0.707107, -0.2, -0.707107, -0.77301, -0.2, -0.634393, -0.83147, -0.2, -0.55557, -0.881921, -0.2, -0.471397, -0.92388, -0.2, -0.382683, -0.95694, -0.2, -0.290285, -0.980785, -0.2, -0.19509, -0.995185, -0.2, -0.0980171, -1, -0.2, -1.83691e-16, -0.995185, -0.2, 0.0980171, -0.980785, -0.2, 0.19509, -0.95694, -0.2, 0.290285, -0.92388, -0.2, 0.382683, -0.881921, -0.2, 0.471397, -0.83147, -0.2, 0.55557, -0.77301, -0.2, 0.634393, -0.707107, -0.2, 0.707107, -0.634393, -0.2, 0.77301, -0.55557, -0.2, 0.83147, -0.471397, -0.2, 0.881921, -0.382683, -0.2, 0.92388, -0.290285, -0.2, 0.95694, -0.19509, -0.2, 0.980785, -0.0980171, -0.2, 0.995185, -2.44921e-16, -0.2, 1, 0, -0.6, 1, 0.0980171, -0.6, 0.995185, 0.19509, -0.6, 0.980785, 0.290285, -0.6, 0.95694, 0.382683, -0.6, 0.92388, 0.471397, -0.6, 0.881921, 0.55557, -0.6, 0.83147, 0.634393, -0.6, 0.77301, 0.707107, -0.6, 0.707107, 0.77301, -0.6, 0.634393, 0.83147, -0.6, 0.55557, 0.881921, -0.6, 0.471397, 0.92388, -0.6, 0.382683, 0.95694, -0.6, 0.290285, 0.980785, -0.6, 0.19509, 0.995185, -0.6, 0.0980171, 1, -0.6, 6.12303e-17, 0.995185, -0.6, -0.0980171, 0.980785, -0.6, -0.19509, 0.95694, -0.6, -0.290285, 0.92388, -0.6, -0.382683, 0.881921, -0.6, -0.471397, 0.83147, -0.6, -0.55557, 0.77301, -0.6, -0.634393, 0.707107, -0.6, -0.707107, 0.634393, -0.6, -0.77301, 0.55557, -0.6, -0.83147, 0.471397, -0.6, -0.881921, 0.382683, -0.6, -0.92388, 0.290285, -0.6, -0.95694, 0.19509, -0.6, -0.980785, 0.0980171, -0.6, -0.995185, 1.22461e-16, -0.6, -1, -0.0980171, -0.6, -0.995185, -0.19509, -0.6, -0.980785, -0.290285, -0.6, -0.95694, -0.382683, -0.6, -0.92388, -0.471397, -0.6, -0.881921, -0.55557, -0.6, -0.83147, -0.634393, -0.6, -0.77301, -0.707107, -0.6, -0.707107, -0.77301, -0.6, -0.634393, -0.83147, -0.6, -0.55557, -0.881921, -0.6, -0.471397, -0.92388, -0.6, -0.382683, -0.95694, -0.6, -0.290285, -0.980785, -0.6, -0.19509, -0.995185, -0.6, -0.0980171, -1, -0.6, -1.83691e-16, -0.995185, -0.6, 0.0980171, -0.980785, -0.6, 0.19509, -0.95694, -0.6, 0.290285, -0.92388, -0.6, 0.382683, -0.881921, -0.6, 0.471397, -0.83147, -0.6, 0.55557, -0.77301, -0.6, 0.634393, -0.707107, -0.6, 0.707107, -0.634393, -0.6, 0.77301, -0.55557, -0.6, 0.83147, -0.471397, -0.6, 0.881921, -0.382683, -0.6, 0.92388, -0.290285, -0.6, 0.95694, -0.19509, -0.6, 0.980785, -0.0980171, -0.6, 0.995185, -2.44921e-16, -0.6, 1, 0, -1, 1, 0.0980171, -1, 0.995185, 0.19509, -1, 0.980785, 0.290285, -1, 0.95694, 0.382683, -1, 0.92388, 0.471397, -1, 0.881921, 0.55557, -1, 0.83147, 0.634393, -1, 0.77301, 0.707107, -1, 0.707107, 0.77301, -1, 0.634393, 0.83147, -1, 0.55557, 0.881921, -1, 0.471397, 0.92388, -1, 0.382683, 0.95694, -1, 0.290285, 0.980785, -1, 0.19509, 0.995185, -1, 0.0980171, 1, -1, 6.12303e-17, 0.995185, -1, -0.0980171, 0.980785, -1, -0.19509, 0.95694, -1, -0.290285, 0.92388, -1, -0.382683, 0.881921, -1, -0.471397, 0.83147, -1, -0.55557, 0.77301, -1, -0.634393, 0.707107, -1, -0.707107, 0.634393, -1, -0.77301, 0.55557, -1, -0.83147, 0.471397, -1, -0.881921, 0.382683, -1, -0.92388, 0.290285, -1, -0.95694, 0.19509, -1, -0.980785, 0.0980171, -1, -0.995185, 1.22461e-16, -1, -1, -0.0980171, -1, -0.995185, -0.19509, -1, -0.980785, -0.290285, -1, -0.95694, -0.382683, -1, -0.92388, -0.471397, -1, -0.881921, -0.55557, -1, -0.83147, -0.634393, -1, -0.77301, -0.707107, -1, -0.707107, -0.77301, -1, -0.634393, -0.83147, -1, -0.55557, -0.881921, -1, -0.471397, -0.92388, -1, -0.382683, -0.95694, -1, -0.290285, -0.980785, -1, -0.19509, -0.995185, -1, -0.0980171, -1, -1, -1.83691e-16, -0.995185, -1, 0.0980171, -0.980785, -1, 0.19509, -0.95694, -1, 0.290285, -0.92388, -1, 0.382683, -0.881921, -1, 0.471397, -0.83147, -1, 0.55557, -0.77301, -1, 0.634393, -0.707107, -1, 0.707107, -0.634393, -1, 0.77301, -0.55557, -1, 0.83147, -0.471397, -1, 0.881921, -0.382683, -1, 0.92388, -0.290285, -1, 0.95694, -0.19509, -1, 0.980785, -0.0980171, -1, 0.995185, -2.44921e-16, -1, 1, 0, 1, 0, 0, 1, 1, 0.0980171, 1, 0.995185, 0.19509, 1, 0.980785, 0.290285, 1, 0.95694, 0.382683, 1, 0.92388, 0.471397, 1, 0.881921, 0.55557, 1, 0.83147, 0.634393, 1, 0.77301, 0.707107, 1, 0.707107, 0.77301, 1, 0.634393, 0.83147, 1, 0.55557, 0.881921, 1, 0.471397, 0.92388, 1, 0.382683, 0.95694, 1, 0.290285, 0.980785, 1, 0.19509, 0.995185, 1, 0.0980171, 1, 1, 6.12303e-17, 0.995185, 1, -0.0980171, 0.980785, 1, -0.19509, 0.95694, 1, -0.290285, 0.92388, 1, -0.382683, 0.881921, 1, -0.471397, 0.83147, 1, -0.55557, 0.77301, 1, -0.634393, 0.707107, 1, -0.707107, 0.634393, 1, -0.77301, 0.55557, 1, -0.83147, 0.471397, 1, -0.881921, 0.382683, 1, -0.92388, 0.290285, 1, -0.95694, 0.19509, 1, -0.980785, 0.0980171, 1, -0.995185, 1.22461e-16, 1, -1, -0.0980171, 1, -0.995185, -0.19509, 1, -0.980785, -0.290285, 1, -0.95694, -0.382683, 1, -0.92388, -0.471397, 1, -0.881921, -0.55557, 1, -0.83147, -0.634393, 1, -0.77301, -0.707107, 1, -0.707107, -0.77301, 1, -0.634393, -0.83147, 1, -0.55557, -0.881921, 1, -0.471397, -0.92388, 1, -0.382683, -0.95694, 1, -0.290285, -0.980785, 1, -0.19509, -0.995185, 1, -0.0980171, -1, 1, -1.83691e-16, -0.995185, 1, 0.0980171, -0.980785, 1, 0.19509, -0.95694, 1, 0.290285, -0.92388, 1, 0.382683, -0.881921, 1, 0.471397, -0.83147, 1, 0.55557, -0.77301, 1, 0.634393, -0.707107, 1, 0.707107, -0.634393, 1, 0.77301, -0.55557, 1, 0.83147, -0.471397, 1, 0.881921, -0.382683, 1, 0.92388, -0.290285, 1, 0.95694, -0.19509, 1, 0.980785, -0.0980171, 1, 0.995185, -2.44921e-16, 1, 1, 0, -1, 0, 0, -1, 1, 0.0980171, -1, 0.995185, 0.19509, -1, 0.980785, 0.290285, -1, 0.95694, 0.382683, -1, 0.92388, 0.471397, -1, 0.881921, 0.55557, -1, 0.83147, 0.634393, -1, 0.77301, 0.707107, -1, 0.707107, 0.77301, -1, 0.634393, 0.83147, -1, 0.55557, 0.881921, -1, 0.471397, 0.92388, -1, 0.382683, 0.95694, -1, 0.290285, 0.980785, -1, 0.19509, 0.995185, -1, 0.0980171, 1, -1, 6.12303e-17, 0.995185, -1, -0.0980171, 0.980785, -1, -0.19509, 0.95694, -1, -0.290285, 0.92388, -1, -0.382683, 0.881921, -1, -0.471397, 0.83147, -1, -0.55557, 0.77301, -1, -0.634393, 0.707107, -1, -0.707107, 0.634393, -1, -0.77301, 0.55557, -1, -0.83147, 0.471397, -1, -0.881921, 0.382683, -1, -0.92388, 0.290285, -1, -0.95694, 0.19509, -1, -0.980785, 0.0980171, -1, -0.995185, 1.22461e-16, -1, -1, -0.0980171, -1, -0.995185, -0.19509, -1, -0.980785, -0.290285, -1, -0.95694, -0.382683, -1, -0.92388, -0.471397, -1, -0.881921, -0.55557, -1, -0.83147, -0.634393, -1, -0.77301, -0.707107, -1, -0.707107, -0.77301, -1, -0.634393, -0.83147, -1, -0.55557, -0.881921, -1, -0.471397, -0.92388, -1, -0.382683, -0.95694, -1, -0.290285, -0.980785, -1, -0.19509, -0.995185, -1, -0.0980171, -1, -1, -1.83691e-16, -0.995185, -1, 0.0980171, -0.980785, -1, 0.19509, -0.95694, -1, 0.290285, -0.92388, -1, 0.382683, -0.881921, -1, 0.471397, -0.83147, -1, 0.55557, -0.77301, -1, 0.634393, -0.707107, -1, 0.707107, -0.634393, -1, 0.77301, -0.55557, -1, 0.83147, -0.471397, -1, 0.881921, -0.382683, -1, 0.92388, -0.290285, -1, 0.95694, -0.19509, -1, 0.980785, -0.0980171, -1, 0.995185, -2.44921e-16, -1, 1 )

[sub_resource type="CylinderMesh" id=3]

[node name="Bike" type="Spatial"]
transform = Transform( 0.999484, 0, -0.0321084, 0, 1, 0, 0.0321084, 0, 0.999484, 0, 0.512639, -2.33557 )
script = ExtResource( 2 )

[node name="FrontWheelJoint" type="Generic6DOFJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.04, 0.2 )
nodes/node_a = NodePath("../BikeFrontWheel")
nodes/node_b = NodePath("../BikeBody")
angular_limit_x/upper_angle = 60.0
angular_limit_x/lower_angle = -60.0
angular_limit_x/restitution = 2.0
angular_limit_x/damping = 0.5
angular_spring_x/stiffness = 5.0
angular_spring_x/damping = 0.1
linear_limit_y/upper_distance = 0.05
linear_limit_y/lower_distance = -0.05
linear_spring_y/enabled = true
linear_spring_y/stiffness = 20.0
linear_spring_y/damping = 1.0
linear_spring_y/equilibrium_point = 0.09
angular_limit_y/upper_angle = 30.0
angular_limit_y/lower_angle = -30.0
angular_limit_y/restitution = 5.0
angular_spring_y/enabled = true
angular_spring_y/stiffness = 0.005
linear_limit_z/restitution = 5.0
angular_spring_z/stiffness = 5.0

[node name="BikeBody" type="RigidBody" parent="."]
mass = 0.4
physics_material_override = ExtResource( 1 )

[node name="RearWheelMesh" type="MeshInstance" parent="BikeBody"]
transform = Transform( -1.62921e-08, 0.02, 0, -0.1, -3.25841e-09, 0, 0, 0, 0.1, 0, 0, -0.2 )
mesh = SubResource( 1 )
material/0 = null

[node name="RearWheelShape" type="CollisionShape" parent="BikeBody"]
transform = Transform( -1.62921e-08, 0.02, 0, -0.1, -3.25841e-09, 0, 0, 0, 0.1, 0, 0, -0.2 )
shape = SubResource( 2 )

[node name="FrameTube" type="MeshInstance" parent="BikeBody"]
transform = Transform( 0.01, 2.32831e-10, 3.46945e-18, 0, -1.62921e-08, 0.01, 0, -0.1, -1.62921e-09, 0, 0.04, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="BikeFrontWheel" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.2 )
mass = 0.3
physics_material_override = ExtResource( 1 )
contacts_reported = 1
contact_monitor = true
axis_lock_angular_x = true
axis_lock_angular_z = true
angular_damp = 1.0

[node name="FrontWheelMesh" type="MeshInstance" parent="BikeFrontWheel"]
transform = Transform( -1.62921e-08, 0.02, 0, -0.1, -3.25841e-09, 0, 0, 0, 0.1, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="FrontWheelShape" type="CollisionShape" parent="BikeFrontWheel"]
transform = Transform( -1.62921e-08, 0.02, 0, -0.1, -3.25841e-09, 0, 0, 0, 0.1, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.99992, 0.0124611, 0.0025157, 0.0124612, 0.921619, 0.387895, 0.00251508, 0.387895, -0.921701, 0, 1, -1.2 )
current = true
script = ExtResource( 3 )
[connection signal="body_entered" from="BikeFrontWheel" to="." method="_on_BikeFrontWheel_body_entered"]
[connection signal="body_exited" from="BikeFrontWheel" to="." method="_on_BikeFrontWheel_body_exited"]
